test/variables/remote/field.chpl
record myRec {
  on Locales.last var x: int;
  on Locales.last var y, z: int;
};
